# boni-learns-python-curses

./: pyproject.toml
src/: __main__.py
src/curses_async/: __init__.py  __main__.py
